k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-api
  namespace: default
  labels:
    app.kubernetes.io/name: backend-api
    app.kubernetes.io/part-of: starttech
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: backend-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
      nodePort: 30080
      protocol: TCP
